fix: handle banned usernames